Add element in cache.
